Refactor engine/config and revamp UI
Introduce multiple refactors and feature improvements across client, engine, config and config UI:

- SonicPulseEngine: register audio source managers explicitly and change playTrack signature to playTrack(url, label, type). Immediately update currentTitle and add history entries with provided label/type. Minor cleanup.
- SonicPulseConfig: add SessionMode, timestamps (lastPlayed) to history entries, enforce history size for non-favorites, add compact helper methods (nextSkin/vis/bg/ribbon), restructure constants, and ensure defaults on load. Improve save/load formatting and use streams for list operations.
- SonicPulseClient: adapt networking and command handlers to new playTrack signature, compact formatting, HUD and keybinding registration cleanup, and simplified asset directory creation.
- ConfigScreen: major UI revamp — reorganized tabs, new buttons (load favs/hist/local), play controls, improved web/radio/local loading, M3U parsing, history/favorites handling (rename, reorder, toggle favorite), scrolling via mouse wheel, and session-aware skipping. Also fixed bugs around renaming/favorites and track labeling when playing.
- Added settings.zip (binary file).

These changes fix label handling, improve history/favorites behavior, streamline local file scanning and radio playlist loading, and modernize the configuration UI.